--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -1735,7 +1735,7 @@ ul.p-search > li > a:hover{
 	background-color: #000;
 	transition: 0.5s;
 }
-.card-gigs .card-image > a > img{
+.card-gigs .card-image > a > img.card-img-top{
 	height: 200px;
 	object-fit: cover;
 	opacity: 0.75;
@@ -1787,6 +1787,20 @@ ul.p-search > li > a:hover{
 .card-price h3{
 	margin-bottom: 0;
 }
+.card-avatar {
+    border-radius: 50%;
+    box-shadow: 0 3px 5px rgb(0 0 0 / 20%);
+    position: absolute;
+    bottom: -20px;
+    right: 1rem;
+    z-index: 10;
+}
+.card-avatar .verified-badge{
+	background-size: 14px;
+    position: absolute;
+    right: -8px;
+    bottom: -4px;
+}
 ul.skills{
     display: flex;
     flex-wrap: wrap;
@@ -1821,6 +1835,7 @@ ul.skills > li > span{
 .short-banner{
 	background-image: linear-gradient(to left, var(--siteColor), var(--siteHoverColor));
 	color: #fff;
+	padding: 1rem 0;
 	text-align: center;
 }
 .sidebar-filter{
@@ -1831,6 +1846,11 @@ ul.skills > li > span{
     background-size: contain;
 	border-radius: 0.25rem;
 	padding: 1.25rem;
+}
+.card-gigs .card-image {
+    position: relative;
+    background-color: #000;
+    transition: 0.5s;
 }
 
 
