--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -4543,7 +4543,7 @@ width: calc(100%);
 }
 .freelancer .freelancer-overview .freelancer-avatar .verified-badge {
 	bottom: 10px;
-    right: 10px;
+    right: 5px;
 }
 .freelancer-name {
 	margin-top: 1rem;
@@ -5858,23 +5858,17 @@ box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.15);
 }
 /* Verified Badge */
 .verified-badge {
+	background-image: url('../images/verified.png');
+	background-repeat: no-repeat;
+	background-size: 20px;
 	position: relative;
-	height: 16px;
-	width: 16px;
+	height: 20px;
+	width: 20px;
 	display: inline-block;
-	background-color: #38b653;
 	border-radius: 50%;
 	text-align: center;
 	z-index: 10;
 	font-weight: 500;
-}
-.verified-badge:before {
-	content: "\e92b";
-	font-family: "Feather-Icons";
-	color: #fff;
-	position: relative;
-	top: -3px;
-	line-height: 0;
 }
 .job-listing .job-listing-company-logo .verified-badge {
 	position: absolute;
