--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -691,6 +691,12 @@ padding: 2rem 1rem;
     align-items: center;
 	position: relative;
 }
+.card{
+	border: none;
+}
+.card-header{
+	background-color: #fff;
+}
 .card-header > h3,
 .card-header > h4,
 .panel-header > h3,
@@ -790,7 +796,7 @@ ul.totalList {
     align-content: center;
     text-align: center;
     background-color: #fff;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+	/*box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);*/
 	margin-bottom:0;
 	overflow:hidden
 }
@@ -1094,7 +1100,7 @@ ul.skill-tags > li {
 	background-position: bottom;
 	background-size: 100%;
 	border-radius: 0.25rem;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);	
+	/*box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);*/
 	margin-bottom:1.5rem;
     min-height: 250px;
 	padding:1.25rem;
