--- a/assets/default/css/bootstrap-tagsinput.css
+++ b/assets/default/css/bootstrap-tagsinput.css
@@ -5,7 +5,7 @@
   padding:2px 12px;
   color: #555;
   vertical-align: middle;
-  border-radius: 4px;
+  border-radius: 2rem;
   max-width: 100%;
   line-height: 22px;
   cursor: text;
