--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -67,6 +67,9 @@ body {
 	background-color:#000;
 	color: #fff;
 }
+.form-group{
+	margin-bottom: 1rem;	
+}
 .row-5 [class^="col"], .row-5 [class*=" col"] {
  padding-left:5px;
  padding-right:5px;
@@ -593,18 +596,20 @@ input.with-border.is-invalid, input.with-border.is-invalid, input.with-border.is
 .myradio .btn-group {
 display:flex
 }
+.btn-group > .btn {
+	border-radius: 0.25rem;
+}
 .myradio .btn-group > .btn {
-border:1px solid #ddd;
-border-radius: 4px !important;
-flex: 1;
-padding: 2rem 1rem;
+	border:1px solid #ddd;
+	flex: 1;
+	padding: 1rem;
 }
 .myradio .btn-group > .btn:hover {
 	background-color:#eee;
 }
-.myradio .btn-group > .btn:active, .myradio .btn-group > .btn.active {
+.myradio .btn-group > .btn-check:checked + .btn {
     color: var(--siteColor);
-    background-color: #ebffe3;
+	background-color: rgba(var(--rgbColor), 10%);
     border-color: var(--siteColor);
 }
 .myradio .btn-group > .btn i {
@@ -684,10 +689,10 @@ padding: 2rem 1rem;
 }
 .panel, .job-overview{
 	background-color:#fff;
-	background-image: url('../images/bg_wave.png');
+	/*background-image: url('../images/bg_wave.png');
 	background-repeat: no-repeat;
 	background-position:left bottom;
-	background-size: 100%;
+	background-size: 100%;*/
 	border-radius: 0.25rem;
 	/*box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);*/
 }
@@ -868,7 +873,6 @@ ul.totalList > li > i {
 	margin-right:1rem
 }
 .dashboard-box-footer {
-	background-color:#f9f9f9;
 	padding:1rem 1.25rem;
     border-top: 1px solid #e4e4e4;
 }
@@ -1801,6 +1805,7 @@ ul.p-search > li > a:hover{
     justify-content: space-between;
 }
 .card-price h3{
+	color: var(--siteColor);
 	margin-bottom: 0;
 }
 .card-avatar {
@@ -1812,10 +1817,10 @@ ul.p-search > li > a:hover{
     z-index: 10;
 }
 .card-avatar .verified-badge{
-	background-size: 14px;
-    position: absolute;
-    right: -8px;
-    bottom: -4px;
+	position: absolute;
+	right: -4px;
+    bottom: -2px;
+    transform: scale(0.75);
 }
 ul.skills{
     display: flex;
@@ -1867,6 +1872,40 @@ ul.skills > li > span{
     background-color: #000;
     transition: 0.5s;
 }
+.scroll-bar{
+	max-height: 400px;
+}
+ul.gig-list{
+	margin-bottom: 0;
+}
+ul.gig-list > li{
+	cursor: pointer;
+	margin-bottom: 1rem;
+	position: relative;
+}
+ul.gig-list > li:last-child{
+	margin-bottom: 0;
+}
+ul.gig-list > li input[type="checkbox"], ul.gig-list > li input[type="radio"] {
+    display: none;
+}
+ul.gig-list > li label{
+	cursor: pointer;
+	font-weight: normal;
+}
+ul.gig-list > li.active, ul.gig-list > li:hover{
+	color: var(--siteColor);
+}
+ul.gig-list > li.active label{
+	font-weight:500;
+}
+ul.gig-list > li.active:before{
+    content: "\e92b";
+	font-family: 'Feather-Icons';
+	font-size: 1.125rem;
+	position: absolute;
+	right: 1rem;
+}
 .sidebar-filter{
 	position: relative;	
 }
@@ -1904,8 +1943,82 @@ ul.skills > li > span{
     pointer-events: none;
     z-index: 1001;
 }
-
-
+ul.d-list{
+	align-items: center;
+	display:flex;
+	flex-wrap:wrap;
+	margin-bottom:0;
+}
+ul.d-list > li{
+	margin-right:1rem;
+}
+.gigger-profile h4 > a{
+	color: #000;
+}
+.gigger-profile h4 > a:hover{
+	color: var(--siteColor);
+}
+/* POST GIGS */
+.post-steps{
+	display:flex;
+	margin-bottom:1.5rem;	    
+    overflow-x: auto;
+	white-space: nowrap;
+}
+.post-steps > a{
+	color: rgba(var(--rgbColor), 75%);
+	align-items: center;
+    display: flex;
+	font-size: 1rem;
+    justify-content: space-between;
+	flex-direction: column;
+	flex: 1;
+	min-width: 100px;
+	position: relative;
+}
+.post-steps > a+a:after {
+    width: 100%;
+    content: '';
+    top: 16px;
+    left: -50%;
+    height: 2px;
+    margin-top: -1px;
+    background-color: rgba(var(--rgbColor), 25%);
+    position: absolute;
+}
+.post-steps > a+a.active:after {
+	background-color: var(--siteColor);
+}
+.post-steps > a > .count{
+	background-color: #fff;
+	border: 2px solid rgba(var(--rgbColor), 50%);
+	color: rgba(var(--rgbColor), 50%);
+    height: 2rem;
+    width: 2rem;
+    border-radius: 2rem;
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    text-align: center;
+	z-index:9;
+}
+.post-steps > a.active, .post-steps > a.active:hover{
+	color:var(--siteColor);
+}
+.post-steps > a.active > .count{
+	background-color:var(--siteColor);
+	border-color:var(--siteColor);
+	color:#fff;
+}
+.post-steps > a.active > span:last-child{
+	font-weight: 500;
+}
+.post-steps > a > span > i{
+	vertical-align: -2px;
+}
+.backbtnproposal{
+	margin-right: 0.5rem;	
+}
 
 
 
