--- a/assets/default/css/lang_ar.css
+++ b/assets/default/css/lang_ar.css
@@ -185,6 +185,10 @@ ul.skills li {
 #backtotop {
 	left: 25px;
 }
+.btn-circle {
+	left: 1rem;
+}
+
 @media only screen and (min-width: 768px) {
 
 }
@@ -559,7 +563,7 @@ ul.dashboard-box-list.if-double-button > li {
 	float: right;
 	right: 0px;
 }
-.dashboard-box-footer .backbtnproject {
+.backbtnproject {
 	margin-left:0.5rem
 }
 .dropdown-menu > li > a {
